# thunar-shares-plugin

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac  configure.ac.in  configure.in.in  meson.build  module.xml  xfce-revision.h.in
data/: Makefile.am  admin-dialog-editor.xml  admin-dialog.xml  dialogs.xml  thunar-page.xml
libshares/: Makefile.am  libshares-paths.c  libshares-paths.h  libshares-util.c  libshares-util.h  libshares-xml.c  libshares-xml.h  meson.build  shares.c  shares.h
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  hye_RU.po  id.po  ie.po  is.po  it.po  ja.po  kab.po  kk.po  ko.po  lo.po  lt.po  lv.po  ms.po  nb.po  (+25 more)
thunar-plugin/: Makefile.am  meson.build  thunar-shares-plugin.c  tsp-admin-editor.c  tsp-admin-editor.h  tsp-admin.c  tsp-admin.h  tsp-page-provider.c  tsp-page.c  tsp-page.h  tsp-prefs-provider.c  tsp-prefs-provider.h  tsp-provider.c  tsp-provider.h
