
SUBDIRS = libshares thunar-plugin po

INTLTOOL =				\
	intltool-extract.in		\
	intltool-merge.in		\
	intltool-update.in

EXTRA_DIST =				\
	ChangeLog			\
	README				\
	AUTHORS				\
	NEWS				\
	$(INTLTOOL)

DISTCLEANFILES = 			\
	intltool-extract		\
	intltool-merge			\
	intltool-update			\
	po/POTFILES

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
