# Without this, error: gettext infrastructure mismatch
ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}

SUBDIRS = libshares thunar-plugin po

EXTRA_DIST =				\
	ChangeLog				\
	README.md				\
	AUTHORS					\
	NEWS					\
	meson.build				\
	xfce-revision.h.in

DISTCLEANFILES = 			\
	po/POTFILES

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
